Managed Promises runnable with virtual threads